fixing dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,13 @@
 
   #search-cities form {
     width: 95%;
+    display: flex;
+  }
+
+  .search-button {
+    background: none;
+    color: var(--font-color);
+    border: none;
   }
 
   .searchbar {
@@ -216,11 +223,17 @@
   }
 
   .footer {
-    padding: 2%;
+    padding: 1%;
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+
+
+  .footer > p {
+    margin-top: 0;
   }
 
   .icon-group{
@@ -233,6 +246,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.icon-group > div > a {
+    text-decoration: none;
+    color: var(--font-color);
 }
   
   @keyframes rotate {
